[package]
name = "kv"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
description = "kv (kernel view): a portable system inspector for Linux"
license = "MIT"
authors = ["Leon Vak <leonvak@gmail.com>"]
repository = "https://github.com/leonvak/kernel-view"
keywords = ["linux", "embedded", "sysfs", "procfs", "diagnostics"]
categories = ["command-line-utilities", "hardware-support"]

[features]
default = ["pci", "usb", "block", "net", "cpu", "mem", "mounts", "thermal", "power", "snapshot"]
pci      = []
usb      = []
block    = []
net      = []
cpu      = []
mem      = []
mounts   = []
thermal  = []
power    = []
dt       = []  # Not in default - only relevant on ARM/RISC-V
snapshot = []

[dependencies]
# Intentionally empty - we're std-only, no external crates allowed.
# This is a feature, not a bug. We want a single static binary that
# works everywhere without dragging in half of crates.io.

[dev-dependencies]
# Also empty - we roll our own test helpers

[profile.release]
opt-level = "z"      # Optimize for size - we're targeting embedded
lto = "fat"          # Full LTO for smallest binary (slower compile)
codegen-units = 1    # Better optimization at cost of compile time
panic = "abort"      # No unwinding = smaller binary
strip = true         # Strip symbols in release

[profile.dev]
# Keep debug builds fast
opt-level = 0
debug = true
